fix mobile view + add values + fix translation

--- a/website/index.html
+++ b/website/index.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" type="image/png" href="img/settings.png" />
     <link rel="stylesheet" type="text/css" href="styles/global.css" />
     <link rel="stylesheet" type="text/css" href="styles/mobile.css" media="screen and (max-width: 649px)" />
-    <link rel="stylesheet" type="text/css" href="styles/tablet.css" media="screen and (min-width: 650px) and (max-width: 1099px)" />
-    <link rel="stylesheet" type="text/css" href="styles/desktop.css" media='screen and (min-width: 1100px)' />
+    <link rel="stylesheet" type="text/css" href="styles/tablet.css" media="screen and (min-width: 650px) and (max-width: 1299px)" />
+    <link rel="stylesheet" type="text/css" href="styles/desktop.css" media='screen and (min-width: 1300px)' />
     <link rel="stylesheet" type="text/css" href="styles/themes/dark.css" />
     <link rel="manifest" href="manifest.webmanifest">
 </head>
@@ -92,15 +92,15 @@
                                 defaultOption="5" />
                         </li>
                         <li>
-                            <button-select configName="solutionGuideTimeout" title="The time in seconds to provide a solution until the answer is guided." label="Solution Guide" sublabel="timeout after sec." options='[["off","off","true"],["5","5"],["6","6"],["7","7"],["8","8"],["9","9"],["10","10"],["15","15"],["20","20"],["25","25"],["30","30"],["60","60"],["120","120"],["180","180"]]'
+                            <button-select configName="solutionGuideTimeout" title="The time in seconds to provide a solution until the answer is guided." label="Time Limit" sublabel="in seconds" options='[["off","off","true"],["5","5"],["6","6"],["7","7"],["8","8"],["9","9"],["10","10"],["15","15"],["20","20"],["25","25"],["30","30"],["60","60"],["120","120"],["180","180"]]'
                                 defaultOption="15" />
                         </li>
                         <li>
-                            <button-select configName="number1Range" title="The range of the first number." label="Number 1" sublabel="Defines the value range" options='[["2-10","2-10"],["11-20","11-20"],["21-30","21-30"],["31-40","31-40"],["41-50","41-50"],["51-99","51-99"],["11-99","11-99"]]'
+                            <button-select configName="number1Range" title="The range of the first number." label="Number 1" sublabel="Defines the value range" options='[["2-10","2-10"],["11-20","11-20"],["21-30","21-30"],["31-40","31-40"],["41-50","41-50"],["11-50","11-50"],["51-99","51-99"],["11-99","11-99"],["99-299","99-299"],["99-999","99-999"]]'
                                 defaultOption="2-10" />
                         </li>
                         <li>
-                            <button-select configName="number2Range" title="The range of the first number." label="Number 2" sublabel="Defines the value range" options='[["2-10","2-10"],["11-20","11-20"],["21-30","21-30"],["31-40","31-40"],["41-50","41-50"],["51-99","51-99"],["11-99","11-99"]]'
+                            <button-select configName="number2Range" title="The range of the first number." label="Number 2" sublabel="Defines the value range" options='[["2-10","2-10"],["11-20","11-20"],["21-30","21-30"],["31-40","31-40"],["41-50","41-50"],["11-50","11-50"],["51-99","51-99"],["11-99","11-99"],["99-299","99-299"],["99-999","99-999"]]'
                                 defaultOption="2-10" />
                         </li>
                         <li>
