add salted multiplication mode

--- a/website/index.html
+++ b/website/index.html
@@ -85,6 +85,10 @@
                                 defaultOption="15" />
                         </li>
                         <li>
+                            <button-select configName="number0Range" title="The range of the base number." label="Number 0" sublabel="Defines the value range" options='[["off","off","true"],["2-10","2-10"],["11-20","11-20"],["21-30","21-30"],["31-40","31-40"],["41-50","41-50"],["11-50","11-50"],["51-99","51-99"],["11-99","11-99"],["99-299","99-299"],["99-999","99-999"]]'
+                                defaultOption="off" />
+                        </li>
+                        <li>
                             <button-select configName="number1Range" title="The range of the first number." label="Number 1" sublabel="Defines the value range" options='[["2-10","2-10"],["11-20","11-20"],["21-30","21-30"],["31-40","31-40"],["41-50","41-50"],["11-50","11-50"],["51-99","51-99"],["11-99","11-99"],["99-299","99-299"],["99-999","99-999"]]'
                                 defaultOption="2-10" />
                         </li>
