--- a/website/index.html
+++ b/website/index.html
@@ -56,6 +56,9 @@
                             <button-link disabled url="" title="Get an introduction about the navigation and features." label="Manual" sublabel="Introduction" />
                         </li>
                         <li>
+                            <button-link disabled url="" title="Share this app with your frinds and family." label="Share with friends" sublabel="on social media" />
+                        </li>
+                        <li>
                             <button class="option-item" id="button-language-selection" title="Select your language."><div id="google_translate_element"></div></button>
                         </li>
                     </ul>
@@ -107,18 +110,23 @@
                             <button-toggle configName="hideTaskMode" title="Currently only supported during the racing mode. Hide all tasks after the first by default." label="Hide Tasks" sublabel="first task is visible" defaultOption="off" />
                         </li>
                         <li>
-                            <button-link disabled url="" title="Print legal information and credits." label="Legal Notice" sublabel="Imprint" />
+                            <button-link disabled url="" title="Print legal information and credits." label="Imprint" sublabel="Legal Notice" />
                         </li>
                         <li>
-                            <button-link url="https://paypal.me/pools/c/8pfcrOnyif" title="Get information about how to contact." label="Feedback, Bugs&lt;br /&gt;& Support.." />
+                            <button-link url="https://paypal.me/pools/c/8pfcrOnyif" title="Get information about how to contact." label="Support, Feedback &lt;br /&gt;& report bugs.." />
                         </li>
                     </ul>
                 </div>
                 <div class="subpage hidden" id="settings-dev">
-                    <ul id="dev-settings-list" class="subpage notranslate" translate="no">
-                        <li><button class="option-item debugging dev-hidden" id="button-logging" title="Switch between debug mode and default." class="hidden debugging">Logging is  <span class="hidden  b-label-status" id="button-logging-on">on</span><span id="button-logging-off" class=" b-label-status">off</span><br/><span></span></button>
+                    <ul id="dev-settings-list" class="subpage">
+                        <li>
+                            <button-select configName="logLevel" title="Select the log level for debugging." label="Log Level" sublabel="for debugging" options='[["4","off"],["3","error"],["2","default"],["1","verbose"]]' defaultOption="3" />
                         </li>
-                        <li><button class="option-item debugging dev-hidden" id="button-voice-tech" title="Switch between types of speech recognition loop." class="hidden debugging">Voice Rec.: <span class="hidden  b-label-status notranslate" translate="no" id="button-voice-tech-endless">ENDLESS</span><span id="button-voice-tech-noise" class=" b-label-status notranslate" translate="no">NOISE</span><br/><span></span></button>
+                        <li>
+                            <button-select disabled configName="speechRecognitionMode" title="Switch between types of the speech recognition loop." label="Voice Rec." sublabel="select a mode" options='[["endless","∞"],["noise","NOISE"]]' defaultOption="endless" />
+                        </li>
+                        <li>
+                            <button-action code="localStorage.clear();location.reload()" title="Delete all stored configuration and training progress." label="Reset page &#x26A0;" sublabel="DELETE ALL local information" />
                         </li>
                     </ul>
                 </div>
