--- a/website/index.html
+++ b/website/index.html
@@ -56,7 +56,7 @@
                             <button-link disabled url="" title="Get an introduction about the navigation and features." label="Manual" sublabel="Introduction" />
                         </li>
                         <li>
-                            <button-action code='if ("share" in navigator) {navigator.share({ title: document.title, text: "Hello World", url: window.location.href }) .then(() => console.log("Successful share! 🎉 ")) .catch(err => console.error(err));}else{console.error("sharing failed")}'
+                            <button-action code='if ("share" in navigator) {navigator.share({ title: "New \"" + document.title + "\" learning App", text: "Check this out:", url: window.location.origin }) .then(() => console.log("Successful share! 🎉 ")) .catch(err => console.error(err));}else{console.error("sharing failed")}'
                                 title="Share this app with your frinds and family." label="Share with friends" sublabel="on social media" />
                         </li>
                         <li>
