--- a/website/index.html
+++ b/website/index.html
@@ -56,7 +56,7 @@
                             <button-link disabled url="" title="Get an introduction about the navigation and features." label="Manual" sublabel="Introduction" />
                         </li>
                         <li>
-                            <button-share title="Share this app with your frinds and family." label="Share with friends" sublabel="on social media" shareHeadline='New "11. Sense" learning App' shareText='Check this out:' />
+                            <button-share title="Share this app with your frinds and family." label="Share with friends" sublabel="on social media" />
                         </li>
                         <li>
                             <button class="option-item" id="button-language-selection" title="Select your language."><div id="google_translate_element"></div></button>
