prepare loading of level config

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -45,8 +45,8 @@
                 <div class="subpage" id="settings-basic">
                     <ul id="basic-settings-list">
                         <li>
-                            <button-select configName="selectedExercise" title="Select your experience level or global task configuration." label="Exercise" sublabel="select configuration" options='[["custom","&#8239;&#8239;&#8239;"],["random_1","? L1"],["random_2","? L2"],["add_race_1","++ L1"],["add_1","+ L1"],["sub_1","- L1"],["mult_1","* L1"],["div_1","/ L1"],["sound_1","S L1"]]'
-                                defaultOption="custom" disabled />
+                            <button-select configName="selectedExercise" title="Select your experience level or global task configuration." label="Exercise" sublabel="select configuration" options='[["custom","&#8239;&#8239;&#8239;"],["add_race_1","A1"],["add_race_2","A2"],["add_race_3","A3"],["add_race_4","A4"],["add_race_5","A5"],["add_1","L1 +"],["mult_1","L1 *"]]'
+                                defaultOption="custom" />
                         </li>
                         <li><button class="option-item" id="button-conversation" title="You can talk.">Conversation<span
                             class="hidden  b-label-status" id="button-conversation-on">on</span><span
