use preconfigured levels + add title...

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -157,6 +157,7 @@
                     <view-task></view-task>
                     <view-task-vertical></view-task-vertical>
                 </section>
+                <view-intro></view-intro>
                 <view-results></view-results>
                 <section id="clipboard"></section>
             </div>
