add b levels + fix random bug in mult

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -45,7 +45,7 @@
                 <div class="subpage" id="settings-basic">
                     <ul id="basic-settings-list">
                         <li>
-                            <button-select configName="selectedExercise" title="Select your experience level or global task configuration." label="Exercise" sublabel="select configuration" options='[["custom","&#8239;&#8239;&#8239;"],["add_race_1","A1"],["add_race_2","A2"],["add_race_3","A3"],["add_race_4","A4"],["add_race_5","A5"],["add_1","L1 +"],["mult_1","L1 *"]]'
+                            <button-select configName="selectedExercise" title="Select your experience level or global task configuration." label="Exercise" sublabel="select configuration" options='[["custom","&#8239;&#8239;&#8239;"],["add_race_1","A1"],["add_race_2","A2"],["add_race_3","A3"],["add_race_4","A4"],["add_race_5","A5"],["add_race_10","B1"],["add_race_11","B2"],["add_1","L1 +"],["mult_1","L1 *"]]'
                                 defaultOption="custom" />
                         </li>
                         <li><button class="option-item" id="button-conversation" title="You can talk.">Conversation<span
