fixing service worker caching

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-language" content="en" />
     <title translate="no" class="notranslate">11. Sense</title>
-    <link rel="shortcut icon" type="image/png" href="img/settings.png" />
+    <link rel="shortcut icon" type="image/png" href="img/settings_192x192.png" />
     <link rel="stylesheet" type="text/css" href="styles/global.css" />
     <link rel="stylesheet" type="text/css" href="styles/mobile.css" media="screen and (max-width: 649px)" />
     <link rel="stylesheet" type="text/css" href="styles/tablet.css" media="screen and (min-width: 650px) and (max-width: 1299px)" />
