--- a/website/app/index.html
+++ b/website/app/index.html
@@ -59,9 +59,9 @@
                         <li>
                             <button-share title="Share this app with your frinds and family." label="Share with friends" sublabel="on social media" />
                         </li>
-                        <li>
+                        <!-- <li>
                             <button class="option-item" id="button-language-selection" title="Select your language."><div id="google_translate_element"></div></button>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="subpage" id="settings-advanced">
@@ -210,17 +210,17 @@
             document.cookie = key + '=' + value + ';expires=' + expires.toUTCString();
         }
 
-        function googleTranslateElementInit() {
+        // function googleTranslateElementInit() {
 
-            setCookie('googtrans', '/en/' + getInitLanguage(), 1);
-            new google.translate.TranslateElement({
-                // pageLanguage: 'en',
-                includedLanguages: "de,en",
-                defaultlanguage: "en"
-            }, 'google_translate_element');
-        }
+        //     setCookie('googtrans', '/en/' + getInitLanguage(), 1);
+        //     new google.translate.TranslateElement({
+        //         // pageLanguage: 'en',
+        //         includedLanguages: "de,en",
+        //         defaultlanguage: "en"
+        //     }, 'google_translate_element');
+        // }
     </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 </body>
 
 </html>
