fix issue with page width on small screens

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
+    <meta id="viewport" name="viewport" content="width=device-width">
     <meta http-equiv="content-language" content="en" />
     <title translate="no" class="notranslate">11. Sense</title>
     <link rel="shortcut icon" type="image/png" href="img/settings_192x192.png" />
