upgrade development view

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -37,10 +37,10 @@
                 <p id="partial-solutions" translate="no" class="notranslate"></p>
             </div>
             <div id="nav" class="hidden page">
-                <h2><select name="settings-selector" id="settings-selector" class="selector dev-change">
+                <h2><select name="settings-selector" id="settings-selector" class="selector">
                     <option value="settings-basic">Basic Settings</option>
                     <option value="settings-advanced" >More Settings</option>
-                    <option value="settings-dev" class="hidden dev-hidden" >Development</option>
+                    <option value="settings-dev" class="hidden dev-hidden dev-change">Development</option>
                 </select></h2>
                 <div class="subpage" id="settings-basic">
                     <ul id="basic-settings-list">
@@ -133,9 +133,9 @@
                 </div>
             </div>
             <div id="stats" class="hidden page">
-                <h2><select name="display-selector" id="display-selector" class="selector dev-change">
+                <h2><select name="display-selector" id="display-selector" class="selector">
                     <option value="stats-history">History</option>
-                    <option value="stats-loggings" class="hidden dev-hidden" >Loggings</option>
+                    <option value="stats-loggings" class="hidden dev-hidden dev-change" >Loggings</option>
                 </select></h2>
                 <div class="subpage" id="stats-history">
                     <h3>Your last results:</h3>
