change funding information and update readme

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -114,7 +114,7 @@
                             <button-link disabled url="" title="Print legal information and credits." label="Imprint" sublabel="Legal Notice" />
                         </li>
                         <li>
-                            <button-link url="https://paypal.me/pools/c/8pfcrOnyif" title="Get information about how to contact." label="Support, Feedback &lt;br /&gt;& report bugs.." />
+                            <button-link url="https://gofund.me/cd7a56a4" title="Get information about how to contact." label="Support, Feedback &lt;br /&gt;& report bugs.." />
                         </li>
                     </ul>
                 </div>
